# Projects

ArUco/: CMakeLists.txt
ArUco/src/: aruco_publisher.cpp
Baxter-Nonlinear/: 4points_traj.py  Mmat_func.py  bax_controller.py  biceps.py  lowpass_filter.py  morequickndirty.py  morequickndirty.py~  test.py
Baxter-Nonlinear/BaxterHighFives/: torque_ex.py
Baxter-Nonlinear/previous1/: 4points_traj.py  bax_controller.py  biceps.py  test.py
Baxter-Nonlinear/previous2/: bax_controller.py  test.py  trajectory.py
Baxter-Nonlinear/test1/: bax_controller (copy).py  bax_controller.py  bax_controller1.py  morequickndirty.py  process_results.py
Baxter-arm-control/: CMakeLists.txt  CMakeLists.txt~  package.xml~
Baxter-arm-control/launch/: gripper_joystick.launch~
Baxter-arm-control/marker/: MarkerData_1_0_1_1.xml
Baxter-arm-control/src/: baxter_test3.cpp  endpoint_command.cpp
Detecting-Red-Cars/: README.md  run.py  test.py  train.py
Handwritten-Characters-Identification/: README.md  test.py  train.py
Kalman-Filter/: Input_2013-01-28_7_openloop.mat  extractMultiZoneData.m  kalmanfilter.m
practice/baxter/: POI  POI.cpp  POI.py  POI1.py  POI222.txt  POI222.xlsx  average.cpp  bad  bad.cpp  baxter_test.cpp  baxter_test1.cpp  baxter_test2.cpp  baxter_test3.cpp  compare_numbers.cpp  describe_pet.py  didianbianjie.html  enum  enum.cpp  function  function.cpp  function_point  function_point.cpp  function_transfer.cpp  jiegou  jiegou.cpp  lei  lei.cpp  lei1  lei1.cpp  lei2  lei2.cpp  lei_jicheng  lei_jicheng.cpp  leichengyuanshunxu.cpp  paixu.cpp  rand.cpp  robot_move  robot_move.cpp  speed.py  test.cpp  (+18 more)
practice/beginner_tutorials/: CMakeLists.txt  package.xml
practice/camera/: CMakeLists.txt  package.xml
practice/camera/src/: camera.cpp  image_subscriber.cpp
practice/opencv/: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  calibrate_camera_charuco  camera  camera.cpp  cmake_install.cmake  display_image  face  face.cpp  gray_image  gray_image.cpp
