cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DisplayImage DisplayImage.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
add_executable( display_image display_image.cpp )
target_link_libraries( display_image ${OpenCV_LIBS} )
add_executable( gray_image gray_image.cpp )
target_link_libraries( gray_image ${OpenCV_LIBS} )
add_executable( camera camera.cpp )
target_link_libraries( camera ${OpenCV_LIBS} )
add_executable( face face.cpp )
target_link_libraries( face ${OpenCV_LIBS} )
add_executable( calibrate_camera_charuco calibrate_camera_charuco.cpp )
target_link_libraries( calibrate_camera_charuco ${OpenCV_LIBS} )
